# side-projects

./: 012_013.pkt  arcade_0_x_y_plot_v0_bl.py  arcade_0_x_y_plot_v1.py  arcade_0_x_y_plot_v4_defaultx_added_csv_already_sorted.py
2024_08_28__sample_interactive_plotter/: arcade_0_x_y_plot_v2.py  (+1 more)
2024_10_07_GRC_guizero_experim/: LICENSE  README.md  _internal_parallel_gr_v01.py  basicsourcesinkwater.py  client.py  exampleusage.py  fmradio.md  gluecode2.py  grc_main_prep.py  guizero_portion.py  intro_to_marimo.md  mod_grc_signal_source.py  parallel_gr_v01.py  pyproject.toml  speca.md  specan.py
2024_10_07_GRC_guizero_experim/paragradio/: mypy.ini
2024_10_07_GRC_guizero_experim/paragradio/v2024_12/: __init__.py
2024_10_07_GRC_guizero_experim/paragradio/v2024_12/_internal/: __init__.py  basicsourcesinkwater.grc  core.py  noise_tx.grc  noise_tx.py  signalsourceguisinks.grc  signalsourceguisinks.py  simspecan.grc  specan.grc  specan.py  wbfm_rx.grc  wbfm_rx.py
2024_10_07_GRC_guizero_experim/paragradio/v2024_12/_internal/noise_tx/: __init__.py  noise_tx_gr3_10.grc  noise_tx_gr3_8.grc  noise_tx_gr3_8.py
2024_10_07_GRC_guizero_experim/paragradio/v2024_12/_internal/psk_tx_loop/: __init__.py  bpsk_tx_loop_gr3_8.grc  psk8_tx_loop_gr3_8.grc  qam16_tx_loop_gr3_8.grc  qpsk_tx_loop_gr3_8.grc  qpsk_tx_loop_gr3_8.py
2024_10_07_GRC_guizero_experim/paragradio/v2024_12/_internal/simspecan/: __init__.py  simspecan_gr3_10.grc  simspecan_gr3_10.py  simspecan_gr3_8.grc  simspecan_gr3_8.py
2024_10_07_GRC_guizero_experim/paragradio/v2025_01/: __init__.py
2024_10_07_GRC_guizero_experim/paragradio/v2025_01/_internal/: core.py
2024_10_07_GRC_guizero_experim/paragradio/v2025_02/: __init__.py
2024_10_07_GRC_guizero_experim/paragradio/v2025_02/_internal/: core.py  signalsourceguisinks.grc
2024_10_07_GRC_guizero_experim/paragradio/v2025_03/: __init__.py
2024_10_07_GRC_guizero_experim/paragradio/v2025_03/_internal/: core.py
2024_10_07_GRC_guizero_experim/publishing_to_pypi/: .gitignore  all_steps.sh  step1.sh
(+174 files in other folders)
